--- a/style.css
+++ b/style.css
@@ -69,8 +69,15 @@ h1 {
     }
 }
 
-.fiok {
+.fiok{
     width: 100%;
-    padding-right: 40rem;
     border-radius: 0;
+}
+.jegy{
+    text-align: center;
+}
+
+.qr{
+    border-radius: 10pt;
+    padding: 1rem;
 }
