--- a/style.css
+++ b/style.css
@@ -71,13 +71,13 @@ h1 {
 
 .fiok{
     width: 100%;
-    border-radius: 0;
+    border-radius: 10pt;
 }
 .jegy{
     text-align: center;
-}
-
-.qr{
     border-radius: 10pt;
-    padding: 1rem;
+    padding: 0.5rem;
+}
+.fiokrow{
+    margin-top: 1rem;
 }
