--- a/style.css
+++ b/style.css
@@ -84,3 +84,17 @@ h1 {
         padding: 0.5rem;
     }
 }
+
+#password-container {
+    position: relative;
+}
+.eye-icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    margin-top:15px;
+}
