--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ h1 {
         padding: 0.5rem;
     }
 }
+#jelszomodositas{
+    text-decoration: underline;
+}
 
 #password-container {
     position: relative;
