--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     background-image: url(images/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: 100% 100%;
     font-family: "Kanit", sans-serif;
 }
 
@@ -101,3 +103,10 @@ h1 {
     height: 24px;
     margin-top:15px;
 }
+
+.profile-image {
+    width: 10px; 
+    height: 10px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
