--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1 {
 
 .text {
     text-align: center;
-    width: 70%;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     background-color: black;
@@ -105,8 +105,47 @@ h1 {
 }
 
 .profile-image {
-    width: 10px; 
-    height: 10px;
+    width: 60px; 
+    height: 60px;
     border-radius: 50%;
     object-fit: cover;
   }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-top: auto; /
+}
+
+.footer .text h1 {
+    margin-bottom: 10px;
+}
+
+.footer .btn {
+    margin-right: 10px;
+}
