--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ a {
     text-decoration: none;
 }
 
+#nav_p{
+    color: white;
+    text-decoration: none;
+    margin-top: 15px;
+}
+
 .site {
     backdrop-filter: blur(2px);
 }
@@ -190,3 +196,24 @@ h1 {
 .logo{
     height: 60pt;
 }
+
+
+footer {
+    position: relative;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    bottom: 0;
+  }
+  
+  .page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 48.2vh;
+  }
+  
+  .page-content {
+    flex: 1;
+  }
