--- a/style.css
+++ b/style.css
@@ -237,3 +237,26 @@ h1 {
     bottom: 0;
     width: 100%;
 }
+
+.error-container {
+    text-align: center;
+    margin-top: 1rem;
+    background-color: #000000ed;
+
+}
+.error-title {
+    font-size: 72px;
+    color: #dc3545;
+}
+.error-description {
+    font-size: 24px;
+    margin: 20px 0;
+}
+.btn {
+    margin: 5px;
+}
+.search-bar {
+    margin-top: 30px;
+    width: 50%;
+    margin: 0 auto;
+}
