--- a/style.css
+++ b/style.css
@@ -74,8 +74,17 @@ h1 {
     & h2 {
         text-align: center;
     }
-    & table tr tbody tr td:nth-child(2) {
+    & table tr{
+        margin-top: 5rem;
+    }
+    & table tr th:last-child{
         text-align: right;
+    }
+    & table tr td:last-child{
+        text-align: right;
+    }
+    & p{
+        text-align: center;
     }
 }
 
@@ -99,6 +108,12 @@ h1 {
         margin-bottom: 15px;
         padding: 10px;
         border-radius: 5px;
+    }
+    & #jelszoform{
+        margin: 0 auto;
+    }
+    & .page-wrapper {
+        min-height: 24.5vh;
     }
     
     & .jegy{
@@ -259,4 +274,14 @@ h1 {
     margin-top: 30px;
     width: 50%;
     margin: 0 auto;
+}
+
+
+.gdpr-nyilatkozat{
+    & h1, h2 {
+        text-align: left;
+        margin: 1pt;
+        padding: 5pt;
+        color: #ffc107;
+    }
 }
