--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root {
+    --white: #ffffff;
+    --black: #000000;
+    --dark-gray: #23272a;
+    --lighter-gray: #2c2f33;
+    --blue: #5865f2;
+    --orange: #faa61a;
+    --red: #ff3860;
+    --error-red: #dc3545;
+    --gold: #ffc107;
+    --transparent-black: #000000ed;
+}
+
 body {
     margin: 0 auto;
     background-image: url(images/bg.jpg);
@@ -65,7 +78,7 @@ h1 {
 }
 
 .arak {
-    background-color: #000000ed;
+    background-color: var(--transparent-black);
     & img {
         width: 100%;
         height: 10rem;
@@ -102,7 +115,7 @@ h1 {
     margin: 0 auto;
     margin-top: 1rem;
     & .fiok-input {
-        background-color: #23272a;
+        background-color: var(--lighter-gray);
         border: none;
         color: white;
         margin-bottom: 15px;
@@ -160,7 +173,7 @@ h1 {
   }
 
   .profile-container {
-    background-color: #2c2f33;
+    background-color: var(--dark-gray);
     color: #fff;
     padding: 20px;
     border-radius: 10px;
@@ -186,7 +199,7 @@ h1 {
 }
 
 .profile-header .edit-btn {
-    background-color: #5865f2;
+    background-color: var(--blue);
     color: white;
     border: none;
     padding: 8px 16px;
@@ -201,7 +214,7 @@ h1 {
 }
 
 .btn-save {
-    background-color: #faa61a;
+    background-color: var(--orange);
     color: white;
     padding: 10px;
     width: 100%;
@@ -212,7 +225,7 @@ h1 {
 
 
 .alert-danger {
-    background-color: #ff3860;
+    background-color: var(--red);
     color: white;
     padding: 10px;
     margin-bottom: 15px;
@@ -235,7 +248,7 @@ h1 {
 
 }
 .mainsite{
-    background-color: #000000ed;
+    background-color: var(--transparent-black);
 }
 
 .site{
@@ -247,7 +260,7 @@ h1 {
 }
 
 .footer{
-    background-color: #000000ed;
+    background-color: var(--transparent-black);
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -256,12 +269,12 @@ h1 {
 .error-container {
     text-align: center;
     margin-top: 1rem;
-    background-color: #000000ed;
+    background-color: var(--transparent-black);
 
 }
 .error-title {
     font-size: 72px;
-    color: #dc3545;
+    color: var(--error-red);
 }
 .error-description {
     font-size: 24px;
@@ -282,6 +295,6 @@ h1 {
         text-align: left;
         margin: 1pt;
         padding: 5pt;
-        color: #ffc107;
+        color: var(--gold);
     }
 }
