--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
     --white: #ffffff;
     --black: #000000;
     --dark-gray: #23272a;
     --lighter-gray: #2c2f33;
     --blue: #5865f2;
+    --yellow: #defa1a;
     --orange: #faa61a;
     --red: #ff3860;
     --error-red: #dc3545;
@@ -17,12 +19,10 @@ body {
     background-image: url(images/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed; 
+    background-attachment: fixed;
     background-size: 100% 100%;
     font-family: "Kanit", sans-serif;
 }
-
-
 
 span {
     margin-right: 10pt;
@@ -33,14 +33,253 @@ a {
     text-decoration: none;
 }
 
-#nav_p{
+
+/* main.php */
+.mainsite {
+    background-color: var(--transparent-black);
+    #map {
+        height: 400px;
+        width: 100%;
+    }
+    
+    #gepek {
+        background-image: url(./images/hatter_gym.jpg);
+        border-radius: 30px;
+    }
+}
+/* ---------------------- */
+
+/* arak.php */
+.arak {
+    background-color: var(--transparent-black);
+
+    & img {
+        width: 100%;
+        height: 10rem;
+        object-fit: cover;
+    }
+
+    & h2 {
+        text-align: center;
+    }
+
+    & table tr {
+        margin-top: 5rem;
+    }
+
+    & table tr th:last-child {
+        text-align: right;
+    }
+
+    & table tr td:last-child {
+        text-align: right;
+    }
+
+    & p {
+        text-align: center;
+    }
+}
+/* ---------------------- */
+
+/* fiok.php jelszomodositas.php */
+.fiokrow {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 1rem;
+
+    .fiok-input {
+        background-color: var(--lighter-gray);
+        border: none;
+        color: white;
+        margin-bottom: 15px;
+        padding: 10px;
+        border-radius: 5px;
+    }
+    .profile-container {
+        /* background-color: var(--transparent-black); */
+        background: linear-gradient(15deg, var(--transparent-black) 60%, var(--dark-gray));
+        color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        margin: auto;
+        font-family: sans-serif;
+    }
+    
+    .profile-header {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            margin-right: 20px;
+        }
+        div {
+            flex-grow: 1;
+        }
+        .edit-btn {
+            background-color: var(--blue);
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    }
+    
+    #jelszoform {
+        margin: 0 auto;
+    }
+    #jelszomodositas {
+        text-decoration: underline;
+    }
+
+    .page-wrapper {
+        min-height: 24.5vh;
+    }
+
+    .jegy {
+        text-align: center;
+        border-radius: 10pt;
+        padding: 0.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /* background-color: var(--transparent-black); */
+        background: linear-gradient(0deg, var(--transparent-black) 70%, var(--dark-gray));
+        .qr {
+            max-width: 300px;
+            max-height: 300px;
+            margin-bottom: 20px;
+            border-radius: 10pt;
+        }
+
+    }
+}
+/* ---------------------- */
+
+/* adatvedelem.php */
+.gdpr-nyilatkozat {
+
+    & h1,
+    h2 {
+        text-align: left;
+        margin: 1pt;
+        padding: 5pt;
+        color: var(--gold);
+    }
+}
+/* ---------------------- */
+
+/* jegyvasarlasform.php */
+.jegyform {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+    background-color: var(--transparent-black);
+
+    .card {
+        background: linear-gradient(15deg, var(--transparent-black), var(--lighter-gray));
+        border-radius: 12px;
+        overflow: hidden;
+        padding: 20px;
+        position: relative;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        border: 2px solid var(--transparent-black);
+    }
+
+    .card:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
+        border-color: var(--gold);
+    }
+
+    .card-title {
+        font-size: 1.6rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+        color: var(--gold);
+    }
+
+    .card-text {
+        font-size: 1.2rem;
+        margin-bottom: 15px;
+        color: var(--white);
+    }
+
+    .btn-primary {
+        background: linear-gradient(45deg, var(--yellow), var(--orange));
+        border: none;
+        padding: 12px 25px;
+        border-radius: 25px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background 0.5s ease, transform 0.2s;
+        text-transform: uppercase;
+    }
+
+    .btn-primary:hover {
+        background: linear-gradient(45deg, var(--orange), var(--yellow));
+        transform: scale(1.05);
+    }
+
+    .card-icon {
+        font-size: 2.5rem;
+        color: var(--gold);
+        margin-bottom: 15px;
+    }
+
+    .card-body {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+}
+/* ---------------------- */
+
+/* 404.php */
+.error-container {
+    text-align: center;
+    margin-top: 1rem;
+    background-color: var(--transparent-black);
+    
+    .error-title {
+        font-size: 72px;
+        color: var(--error-red);
+    }
+
+    .error-description {
+        font-size: 24px;
+        margin: 20px 0;
+    }
+
+    .btn {
+        margin: 5px;
+    }
+
+    .search-bar {
+        margin-top: 30px;
+        width: 50%;
+        margin: 0 auto;
+    }
+}
+/* ---------------------- */
+
+#nav_p {
     color: white;
     text-decoration: none;
     margin-top: 15px;
+    padding-right: 3rem;
 }
 
 .site {
     backdrop-filter: blur(2px);
+    min-height: 100vh;
 }
 
 .form {
@@ -77,82 +316,10 @@ h1 {
     background-color: transparent;
 }
 
-.arak {
-    background-color: var(--transparent-black);
-    & img {
-        width: 100%;
-        height: 10rem;
-        object-fit: cover;
-    }
-    & h2 {
-        text-align: center;
-    }
-    & table tr{
-        margin-top: 5rem;
-    }
-    & table tr th:last-child{
-        text-align: right;
-    }
-    & table tr td:last-child{
-        text-align: right;
-    }
-    & p{
-        text-align: center;
-    }
-}
-
-#map {
-    height: 400px;
-    width: 100%;
-}
-#gepek{
-    background-image: url(./images/hatter_gym.jpg);
-    border-radius: 30px;
-}
-
-.fiokrow{
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 1rem;
-    & .fiok-input {
-        background-color: var(--lighter-gray);
-        border: none;
-        color: white;
-        margin-bottom: 15px;
-        padding: 10px;
-        border-radius: 5px;
-    }
-    & #jelszoform{
-        margin: 0 auto;
-    }
-    & .page-wrapper {
-        min-height: 24.5vh;
-    }
-    
-    & .jegy{
-        text-align: center;
-        border-radius: 10pt;
-        padding: 0.5rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        & .qr{
-            max-width: 300px;
-            max-height: 300px;
-            margin-bottom: 20px;
-            border-radius: 10pt;
-        }
-        
-    }
-}
-#jelszomodositas{
-    text-decoration: underline;
-}
-
 #password-container {
     position: relative;
 }
+
 .eye-icon {
     position: absolute;
     right: 10px;
@@ -161,52 +328,16 @@ h1 {
     cursor: pointer;
     width: 24px;
     height: 24px;
-    margin-top:15px;
+    margin-top: 15px;
 }
 
 .profile-image {
-    width: 40pt; 
+    width: 40pt;
     height: 40pt;
     border-radius: 50%;
     object-fit: cover;
     margin-left: 10pt;
-  }
-
-  .profile-container {
-    background-color: var(--dark-gray);
-    color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    margin: auto;
-    font-family: sans-serif;
 }
-
-.profile-header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.profile-header img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-right: 20px;
-}
-
-.profile-header div {
-    flex-grow: 1;
-}
-
-.profile-header .edit-btn {
-    background-color: var(--blue);
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 
 .form-label {
     font-size: 0.9rem;
@@ -223,7 +354,6 @@ h1 {
     cursor: pointer;
 }
 
-
 .alert-danger {
     background-color: var(--red);
     color: white;
@@ -232,69 +362,26 @@ h1 {
     border-radius: 5px;
 }
 
-.logo{
+.logo {
     height: 60pt;
 }
 
-.text-right{
+.text-right {
     text-align: right;
 }
-#nav_p{
-    padding-right: 3rem;
-}
-.kosartable{
+
+.kosartable {
     width: 100%;
     text-align: right;
-
-}
-.mainsite{
-    background-color: var(--transparent-black);
 }
 
-.site{
-    min-height: 100vh;
-}
-
-.content{
+.content {
     padding-bottom: 10rem;
 }
 
-.footer{
+.footer {
     background-color: var(--transparent-black);
     position: absolute;
     bottom: 0;
     width: 100%;
-}
-
-.error-container {
-    text-align: center;
-    margin-top: 1rem;
-    background-color: var(--transparent-black);
-
-}
-.error-title {
-    font-size: 72px;
-    color: var(--error-red);
-}
-.error-description {
-    font-size: 24px;
-    margin: 20px 0;
-}
-.btn {
-    margin: 5px;
-}
-.search-bar {
-    margin-top: 30px;
-    width: 50%;
-    margin: 0 auto;
-}
-
-
-.gdpr-nyilatkozat{
-    & h1, h2 {
-        text-align: left;
-        margin: 1pt;
-        padding: 5pt;
-        color: var(--gold);
-    }
 }
