--- a/style.css
+++ b/style.css
@@ -392,3 +392,81 @@ h1 {
 .gold{
     color: var(--gold);
 }
+
+/* faqs.php */
+.faqs_section
+{
+  min-height: 100vh;
+  width: 60%;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(0, 0, 0, 0.9);
+  border-radius: 2rem;
+}
+
+.title
+{
+  font-size: 3rem;
+  margin: 2rem 0;
+}
+
+.faqs
+{
+  max-width: 700px;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #fff;
+  cursor: pointer;
+}
+
+.question
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.question h3
+{
+  font-size: 1.8rem;
+}
+
+.answer
+{
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease-in-out;
+}
+
+.answer p
+{
+  padding-top: 1rem;
+  line-height: 1.6;
+  font-size: 1.4rem;
+}
+
+.faqs.active .answer
+{
+  max-height: 300px;
+}
+
+.faqs.active svg {
+    transform: rotate(180deg);
+}
+
+.faqs_svg {
+    transition: transform 0.5s ease-in;
+}
+
+.flag-icon {
+    width: 24px;
+    height: auto;
+    margin-right: 5px;
+}
+
+.dropdown-item .flag-icon {
+    margin-right: 8px;
+}
+/* --- */
