sponsor block main oldalon és hazirend kicsit szepitese

--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ a {
         padding: 5pt;
         color: var(--gold);
     }
+   
 }
 /* ---------------------- */
 
@@ -479,4 +480,8 @@ h1 {
     border-radius: 2rem;
     font-family: Tahoma;
 }
+/* --- */
+
+/* -sponsor-slider- */
+
 /* --- */
