--- a/sponsor_slider.css
+++ b/sponsor_slider.css
@@ -22,7 +22,7 @@
   .logos:after {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 50px;
     height: 100%;
     content: "";
     z-index: 2;
@@ -53,7 +53,38 @@
     margin: 0 40px;
   }
   .edzo img{
-    height: 350px;
+    height: 500px;
+    width:250px;
     border-radius:20%;
     animation: transition 1s;
   }
+
+
+  .edzo-item {
+    display: inline-block;
+    text-align: center;
+    margin: 0 20px;
+    width: 250px;
+    margin: 10px;
+}
+
+.edzo-item img {
+    display: block;
+    margin: 0 auto;
+}
+
+.edzo-item .btn {
+    margin-top: 10px;
+    text-align: center;
+    margin-left: 30px;
+    font-size: 20px;
+    border-radius: 20px;
+    padding-left:15px;
+    padding-right:15px;
+
+}
+.edzo-item .btn:hover{
+    background-color: black ;
+    border-color: black ;
+    color: white;
+}
