--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --red: #ff3860;
     --error-red: #dc3545;
     --gold: #ffc107;
-    --transparent-black: #000000ed;
+    --transparent-black: #000000dd;
 }
 .bg-transparentblack{
     background: linear-gradient(15deg, var(--transparent-black) 60%, var(--dark-gray));
@@ -329,7 +329,6 @@ h1 {
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    background-color: black;
 }
 
 .table>:not(caption)>*>* {
@@ -485,6 +484,47 @@ h1 {
     margin: 2rem 9rem;
     border-radius: 2rem;
     font-family: Tahoma;
+}
+/* --- */
+
+/* admin.php */
+.admin {
+    h2{
+        text-align: center;
+    }
+    .sidebar {
+        height: 100vh;
+        width: 250px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding-top: 20px;
+    }
+    .sidebar a {
+        display: block;
+        color: var(--white);
+        padding: 10px;
+        text-decoration: none;
+        transition: 0.3s;
+    }
+    .sidebar a:hover {
+        background-color: var(--blue);
+        color: var(--white);
+    }
+    .main-content {
+        margin-left: 250px; /* Same width as the sidebar */
+        padding: 20px;
+    }
+    iframe {
+        width: 100%;
+        height: 80vh;
+        border: none;
+    }
+    table{
+        background: linear-gradient(0, var(--transparent-black) 60%, var(--dark-gray));
+    }
+    background-color: var(--transparent-black);
+
 }
 /* --- */
 
