--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    margin: 0 auto;
+    margin: 0;
     background-image: url(images/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -590,6 +590,7 @@ h1 {
 
 /* admin.php */
 .admin {
+
     h2{
         text-align: center;
     }
@@ -689,7 +690,10 @@ h1 {
         display: none;
     }
     background-color: var(--transparent-black);
-
+    #searchInput{
+        background-color: white;
+        color: black;
+    }
 }
 /* --- */
 
