--- a/style.css
+++ b/style.css
@@ -860,4 +860,18 @@ h1 {
     }
   }
 
+
+  .stars {
+    font-size: 2em;
+    cursor: pointer;
+}
+
+.star {
+    color: gray;
+}
+
+.star.selected {
+    color: gold;
+}
+
 /* --- */
