--- a/style.css
+++ b/style.css
@@ -943,18 +943,21 @@ h1 {
 }
 
 .form-textarea {
-    width: 300px;
+    width: 500px;
     height: 40px;
     resize: none;
 }
 
+.form-textarea:nth-of-type(2) {
+    height: 200px;
+}
+
 .form-file {
-    width: 300px;
+    width: 500px;
 }
 
 .form-button {
-    width: 300px;
+    width: 500px;
     height: 40px;
 }
-
 /* --- */
