--- a/style.css
+++ b/style.css
@@ -893,16 +893,14 @@ h1 {
 /* --- */
 
 /* shop oldal */
-.kosarikon{
-    background-color: var(--gold);
-    padding: 1.5rem;
-    width: min-content;
+.kosarszam{
+    display: inline-block;
+    background-color: var(--orange);
     border-radius: 50%;
-    position: sticky;
-    margin-right: 1rem;
-    top: 0;
-    float: right;
-    z-index: 3000;
+    width: 1.5em;
+    height: 1.5em;
+    text-align: center;
+    justify-content: center;
 }
 
 /* Üzenőfal */
