--- a/style.css
+++ b/style.css
@@ -959,3 +959,21 @@ h1 {
     height: 40px;
 }
 /* --- */
+
+/* messages.php */
+.pagination-btn {
+    background-color: var(--orange);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.pagination-btn:hover {
+    background-color: #dc3545;
+}
+/*  */
