--- a/style.css
+++ b/style.css
@@ -377,6 +377,37 @@ a {
 }
 /* ---------------------- */
 
+
+/* webshop.php */
+.webshop{
+    padding: 1rem;
+    .product-card {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 8px;
+        overflow: hidden;
+        transition: transform 0.3s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .product-img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+
+    .product-info {
+        padding: 15px;
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+/* ---------------------- */
+
+
 /* 404.php */
 .error-container {
     text-align: center;
