--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ a {
             margin-top: 10px;
             text-align: center;
             margin-left: 30px;
-            font-size: 20px;
+            font-size: 1em;
             border-radius: 20px;
             padding-left:15px;
             padding-right:15px;
@@ -170,7 +170,6 @@ a {
         
         .edzo-nev {
         margin-top: 10px;
-        font-size: 1em;
         color: white;
         font-size: 24px;
         margin-left: 25px;
@@ -441,6 +440,17 @@ a {
     }
 }
 /* ---------------------- */
+
+.navbar{
+    .container-fluid{
+        justify-content: space-between;
+    }
+    @media (max-width: 860px) {
+        .container-fluid {
+          justify-content: space-around;
+        }
+      }
+}
 
 #nav_p {
     color: white;
@@ -951,7 +961,6 @@ h1 {
     padding: 15px; 
 }
 .uzenofalKep {
-    width: 600px;
     height: 400px;
     object-fit: cover;
     border: 5px solid #999;
@@ -960,6 +969,7 @@ h1 {
     text-shadow: 2px 2px 4px #000000;
     font-size: 4rem;
     margin-top: 10pt;
+    word-wrap: break-word;
 }
 .belsoCim {
     text-shadow: 1px 1px 2px #999999;
@@ -1005,7 +1015,7 @@ h1 {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1em;
     margin: 4px 2px;
     cursor: pointer;
 }
