--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     --transparent-black: #000000dd;
 }
 
+*{
+    word-wrap: break-word;
+}
+
 .bg-transparentblack{
     background: var(--transparent-black);
     border-radius: 3%;
@@ -969,8 +973,15 @@ h1 {
     text-shadow: 2px 2px 4px #000000;
     font-size: 4rem;
     margin-top: 10pt;
-    word-wrap: break-word;
 }
+@media (max-width: 768px) {
+    #uzenoCim {
+        font-size: 2rem;
+    }
+  }
+
+
+
 .belsoCim {
     text-shadow: 1px 1px 2px #999999;
 }
