--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ a {
             margin-top: 10px;
             text-align: center;
             margin-left: 30px;
-            font-size: 20px;
+            font-size: 1em;
             border-radius: 20px;
             padding-left:15px;
             padding-right:15px;
@@ -170,7 +170,6 @@ a {
         
         .edzo-nev {
         margin-top: 10px;
-        font-size: 1em;
         color: white;
         font-size: 24px;
         margin-left: 25px;
@@ -377,6 +376,43 @@ a {
 }
 /* ---------------------- */
 
+
+/* webshop.php */
+.webshop{
+    padding: 1rem;
+    .product-card, .card {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 8px;
+        overflow: hidden;
+        transition: transform 0.3s ease-in-out;
+        height: 100%;
+    }
+
+    .product-img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+
+    .product-info {
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .btn-primary {
+        align-self: flex-start;
+    }
+
+    .toggle-buttons button {
+        width: 150px;
+        margin: 0 10px;
+    }
+}
+/* ---------------------- */
+
+
 /* 404.php */
 .error-container {
     text-align: center;
@@ -404,6 +440,17 @@ a {
     }
 }
 /* ---------------------- */
+
+.navbar{
+    .container-fluid{
+        justify-content: space-between;
+    }
+    @media (max-width: 860px) {
+        .container-fluid {
+          justify-content: space-around;
+        }
+      }
+}
 
 #nav_p {
     color: white;
@@ -914,7 +961,6 @@ h1 {
     padding: 15px; 
 }
 .uzenofalKep {
-    width: 600px;
     height: 400px;
     object-fit: cover;
     border: 5px solid #999;
@@ -924,6 +970,14 @@ h1 {
     font-size: 4rem;
     margin-top: 10pt;
 }
+@media (max-width: 768px) {
+    #uzenoCim {
+        font-size: 2rem;
+    }
+  }
+
+
+
 .belsoCim {
     text-shadow: 1px 1px 2px #999999;
 }
@@ -968,7 +1022,7 @@ h1 {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1em;
     margin: 4px 2px;
     cursor: pointer;
 }
