--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ a {
     }
     
     #gepek {
-        background-image: url(./images/hatter_gym.jpg);
+        background-image: url(./images/hatter.webp);
         border-radius: 30px;
     }
 
