--- a/style.css
+++ b/style.css
@@ -1030,6 +1030,40 @@ h1 {
 }
 /*  */
 
+.app-promo {
+    background: var(--transparent-black);
+    padding: 50px 0;
+    border-radius: 15px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    .app-title {
+        font-size: 2.5rem;
+        font-weight: bold;
+        color: var(--gold);
+    }
+    
+    .app-subtitle {
+        font-size: 1.2rem;
+        color: #f2f2f2;
+    }
+    
+    .app-image {
+        max-width: 90%;
+        border-radius: 20px;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+    }
+    
+    .btn-success {
+        font-size: 1.2rem;
+        padding: 10px 25px;
+        border-radius: 50px;
+    }
+}
+
+
+
+
+
+
 
 @media (max-width: 500px) {
     .p-5{
