--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ a {
         }
         
         .edzo-nev {
-        margin-top: 10px;
         color: white;
         font-size: 24px;
         margin-left: 25px;
@@ -1008,11 +1007,12 @@ h1 {
 }
 /* admin üzenőfal */
 .form-container {
-    text-align: center;
+    max-width: 600px;
+    margin: auto;
 }
 
 .form-textarea {
-    width: 80%;    
+    width: 100%;    
     height: 40px;
     resize: none;
 }
@@ -1022,16 +1022,18 @@ h1 {
 }
 
 .form-file {
-    width: 80%;
+    width: 100%;
 }
 
 .form-button {
-    width: 80%;
+    width: 100%;
     height: 40px;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 @media screen and (max-width: 768px) {
-    .form-textarea, .form-file, .form-button {
-        width: 100%;
+     .form-container {
+        width: 80%;
     }
     
 }
